--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container"></div>
+    <div class="container">
+        <p id="calculate-space">
+            Calculate: 
+        </p>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
