--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
 <body>
     <div class="container">
         <p id="calculate-space">
-            Calculate: 
+            Calculate:
         </p>
+        <!-- Placeholder for dynamically created buttons -->
+        <div id="buttons-container">
+            <!-- Number and operator buttons will be appended here -->
+             <button id="clear">Clear</button>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
